# spanglish-backend

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
dictionary/: admin.py  models.py  serializers.py  urls.py  views.py
dictionary/migrations/: 0001_initial.py
quiz/: models.py  serializers.py  urls.py  views.py
quiz/migrations/: 0001_initial.py
spanglish/: asgi.py  settings.py  urls.py  wsgi.py
